--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,4 +32,11 @@ workflows:
   build-and-packge:
     jobs:
       - ci-build
+      - package:
+          requires:
+            - ci-build
+          filters:
+            branches:
+              only:
+                - master
 
